--- a/Form Pembelian Barang/index.html
+++ b/Form Pembelian Barang/index.html
@@ -46,8 +46,18 @@
             <button class="btn btn-success" type="submit" onclick="proses()">Proses</button>
             <button class="btn btn-danger" type="reset">Reset</button>
         </form>
+  
         <h5>Keterangan</h5>
-        <p id="teks">
+        <p>
+            <strong>Form Pembelian Barang 2 : </strong>input <i>Nama barang,Jumlah,</i> di inputkan <br> secara manual,
+            dan akan di <i>proses</i> otomatis dengan JavaScript yang sudah di beri rumus sebagai berikut :
+            <table style="border: 1px solid black;">
+                <tr>
+                    <td>Total </td>
+                    <td>=</td>
+                    <td>Harga * Jumlah</td>
+                </tr>
+            </table>
         </p>
     </div>
 
